tests/baselines/reference/amdDependencyCommentName1.errors.txt
amdDependencyCommentName1.ts(3,21): error TS2307: Cannot find module 'm2' or its corresponding type declarations.


==== amdDependencyCommentName1.ts (1 errors) ====
    ///<amd-dependency path='bar' name='b'/>
    
    import m1 = require("m2")
                        ~~~~
!!! error TS2307: Cannot find module 'm2' or its corresponding type declarations.
    m1.f();